<resources>
    <string name="app_name">ShoeStore</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register Here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_email">Enter email</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="instructions_title">Instructions</string>
    <string name="welcome_text">This is a shoe store. Here you can add your shoes inventory.</string>
    <string name="instruction_text">Next up, you will see a list of shoes. If you want to add a custom shoe, you need to press the Add shoe button. Then you will fill in the following fields: name, size, company, description, image</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="add_your_password">Add your password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="add_the_name">Enter the shoe name</string>
    <string name="size">Size</string>
    <string name="add_the_size">Enter the size</string>
    <string name="company">Company</string>
    <string name="add_the_company">Enter the company name</string>
    <string name="description">Description</string>
    <string name="add_the_description">Enter the description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoe">Add shoe</string>
    <string name="welcome_title">Welcome</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="add_your_email_address">Add your email address</string>
    <string name="logout">logout</string>

</resources>

