<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ui.shoe.ShoeListViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/fragment_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_layout_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_the_name"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:text="@={shoe.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/size_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_the_size"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:text="@={`` + shoe.size}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/add_the_company"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={shoe.company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/add_the_description"
                android:inputType="text"
                android:text="@={shoe.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/large_layout_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_layout_margin"
                android:onClick="@{(v) -> shoeListViewModel.addShoe(v,shoe)}"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v) -> shoeListViewModel.navigate(v)}"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>
</layout>